Use "ALL-MODULE-PATH,ALL-DEFAULT" for module resolution