@@ -1,4 +1,3 @@
-import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -27,7 +26,6 @@ interface Build {
 		jar();
 		jdeps();
 		compileTest();
-		showTestModuleResolution();
 		test();
 	}
 
@@ -71,21 +69,11 @@ interface Build {
 		javac.run();
 	}
 
-	static void showTestModuleResolution() {
-		Bach.run("java",
-				"--show-module-resolution",
-				"--module-path", TARGET_TEST + File.pathSeparator + MODULES,
-				"--add-modules", "ALL-MODULE-PATH",
-				"--module", "org.junit.platform.console",
-				"--scan-modules"
-		);
-	}
-
 	static void test() {
 		System.out.printf("%n[test]%n%n");
 		var java = new Bach.JdkTool.Java();
 		java.modulePath = List.of(TARGET_TEST, MODULES);
-		java.addModules = List.of("com.github.forax.beautifullogger", "java.scripting");
+		java.addModules = List.of("ALL-MODULE-PATH,ALL-DEFAULT");
 		java.module = "org.junit.platform.console";
 		java.args = List.of("--scan-modules");
 		java.run();
